# godot-setup

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  action.yml  index.js  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: demo.yml
hooks/: README.md  __init__.py  check_git_archive.py
lib/: Linux.js  MacOS.js  Platform.js  Windows.js
scripts/: godot_x11_wrapper.sh  install_scream.ps1  install_virtual_display_rs.ps1
src/hooks/: validate-git-archive.js
test/: x11.env
test/hooks/: check-achive.test.js
test_project/: Test.cs  Test.cs.uid  export_presets.cfg  icon.png.import  project.godot  test.csproj  test.gd  test.gd.uid  test.sln  test.tscn  test_mono.tscn  test_non_mono.gd  test_non_mono.gd.uid  test_non_mono.tscn
