[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setup-godot-hooks"
version = "1.0.0"
description = "Pre-commit hooks for Godot projects"
authors = [
    {name = "setup-godot contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"

[project.scripts]
check-git-archive = "hooks.check_git_archive:main"

[tool.setuptools.packages.find]
include = ["hooks*"]

[tool.setuptools.package-data]
hooks = ["*.py"]
